fix double scroll

--- a/assets/tour.css
+++ b/assets/tour.css
@@ -63,9 +63,12 @@
   }
 }
 @media (min-width: 768px) {
+  body {
+    overflow-y: hidden;
+  }
+
   .tour-wrapper {
     height: 100vh;
-    width: 33%;
     overflow-y: auto;
   }
 
@@ -74,14 +77,6 @@
     top: 0;
     right: 0;
     height: 100vh;
-    width: 67%;
-  }
-
-  .wide-column .tour-wrapper {
-    width: 40%;
-  }
-  .wide-column #map-wrapper {
-    width: 60%;
   }
 
   .map-on-left .tour-wrapper {
@@ -137,7 +132,7 @@
   #main-nav #nav-toggle-btn {
     display: block;
   }
-  #main-nav .collapsed-mobile {
+  #main-nav #main-nav-list.collapsed {
     display: none;
   }
 }
@@ -297,6 +292,21 @@ main #back-to-top {
   }
 }
 
+.zoom-btns {
+  position: absolute;
+  z-index: 700;
+  padding: 5px;
+}
+.zoom-btns .icon-btn {
+  border-radius: 0;
+}
+.zoom-btns #zoom-out.btn {
+  border-bottom-width: 1px;
+}
+.zoom-btns #zoom-in-btn {
+  border-top-width: 1px;
+}
+
 /* legend */
 .legend-wrapper {
   padding: 15px;
@@ -320,8 +330,9 @@ main #back-to-top {
 }
 .legend-wrapper .legend li, .legend-wrapper .legend label {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
+  padding: 5px 0;
 }
 .legend-wrapper .legend li img, .legend-wrapper .legend li svg, .legend-wrapper .legend label img, .legend-wrapper .legend label svg {
   margin: 10px;
